Translation of posts finished

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,1 +1,33 @@
-Czesc: Hello
+Cześć: Hello
+Konwersacje: Conversations
+Wiadomości: Messages
+Posty: Posts
+Przeglądaj: Browse
+Stwórz post: New Post
+Zadania: Quests
+Pokaż zadania: Show Quests
+Pokaż chat: Show chat
+Konto: Account
+Dane konta: Account data
+Administrator: Admin
+Lista użytkowników: Users list
+Stwórz użytkownika: Create user
+Dodaj zadanie: New Quest
+Lista zadań: Quests list
+Lista postów: Posts list
+Edytuj swój post: Edit your Post
+Edytuj: Edit
+Wróć: Back
+Tytuł: Title
+Treść: Content
+Wybierz zdjęcie: Choose an image
+Zdjęcie: Photo
+Brak zdjęcia: No image
+Dodaj post: Add Post
+Stwórz nowy post: Add new Post
+Data: Date
+Autor: Author
+Pokaż: Show
+Usuń: Delete
+Udostępnij: Send
+Zarządzanie: Management
