--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -31,3 +31,14 @@ Pokaż: Show
 Usuń: Delete
 Udostępnij: Send
 Zarządzanie: Management
+Post został poprawnie utworzony: The post has been successfully created
+Post został usunięty: The post has been deleted
+Post został opublikowany: The post has been published
+Post został zmodyfikowany: The post has been edited
+Ten adres e-mail istnieje w bazie danych, proszę podać inny.: This e-mail exist, please enter another one.
+Rola została zmieniona: Role has been changed
+Użytkownik został usunięty: User has been deleted
+Zadanie zostało dodane: Quest has been added
+Zadanie zostało zmodyfikowane: Quest has been edited
+Zadanie zostało usunięte: Quest has been deleted
+Nowy użytkownik został utworzony: New user has been created
