--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -31,6 +31,48 @@ Pokaż: Show
 Usuń: Delete
 Udostępnij: Send
 Zarządzanie: Management
+Edytuj zadanie: Edit Quest
+Zawartość: Content
+Wybierz użytkownika: Select user
+Stwórz nowe zadanie: Create new Quest
+Zapisz: Submit
+Dodaj: Create
+Zadanie: Quest
+Data dodania: Add date
+Ostateczny termin: Deadline
+Postęp: Progress
+Pracownik: Worker
+Czy chcesz usunąć zadanie: Do you want to delete quest
+Jesteś pewien: Are you sure
+Czy chcesz wysłać post: Do you want to send post
+Wyślij: Send
+Czy chesz usunąć post: Do you want to delete post
+Anuluj: Cancel
+Stwórz nowego użytkownika: Create new user
+Rola: Role
+Użytkownik: User
+Zarejestruj: Register
+Hasło: Password
+Powtórz hasło: Repeat password
+Zaloguj się: Log in
+Strona logowania: Login page
+Zapomniałeś hasła: Forgot password
+Zaloguj: Login
+Edytuj swoje dane Facebooka: Edit your Facebook data
+sekretny: secret
+Edytuj ID strony: Edit App ID
+Edytuj token dostępu Facebooka: Edit Facebook access token
+Edytuj swoje dane: Edit your data
+Edytuj hasło: Edit password
+Resetowanie hasła: Reset password
+Zresetuj swoje hasło: Reset your password
+Resetuj: Submit
+Zmień: Change
+Zmień rolę: Change role
+Czy jesteś pewny, że chcesz usunąć użytkownika: Do you want to delete user
+Zmiana e-maila: Change e-mail
+Zapisz zmianę: Save
+
 Post został poprawnie utworzony: The post has been successfully created
 Post został usunięty: The post has been deleted
 Post został opublikowany: The post has been published
