Work on notifications of new messages throughout the application

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -84,3 +84,4 @@ Zadanie zostało dodane: Quest has been added
 Zadanie zostało zmodyfikowane: Quest has been edited
 Zadanie zostało usunięte: Quest has been deleted
 Nowy użytkownik został utworzony: New user has been created
+Otrzymano nową wiadomość: You have received a new message
