--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -60,7 +60,7 @@ Zapomniałeś hasła: Forgot password
 Zaloguj: Login
 Edytuj swoje dane Facebooka: Edit your Facebook data
 sekretny: secret
-Edytuj ID strony: Edit App ID
+Edytuj ID strony: Edit Page ID
 Edytuj token dostępu Facebooka: Edit Facebook access token
 Edytuj swoje dane: Edit your data
 Edytuj hasło: Edit password
@@ -72,6 +72,7 @@ Zmień rolę: Change role
 Czy jesteś pewny, że chcesz usunąć użytkownika: Do you want to delete user
 Zmiana e-maila: Change e-mail
 Zapisz zmianę: Save
+Brak zadań do wyświetlenia: No quests to show
 
 Post został poprawnie utworzony: The post has been successfully created
 Post został usunięty: The post has been deleted
