Post management with photo server enabled

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -76,6 +76,7 @@ Brak zadań do wyświetlenia: No quests to show
 
 Post został poprawnie utworzony: The post has been successfully created
 Post został usunięty: The post has been deleted
+Zdjęcie zostało usunięte: The photo has been removed
 Post został opublikowany: The post has been published
 Post został zmodyfikowany: The post has been edited
 Ten adres e-mail istnieje w bazie danych, proszę podać inny.: This e-mail exist, please enter another one.
