Implemented Project when create new Quest

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -33,6 +33,10 @@ Udostępnij: Send
 Zarządzanie: Management
 Edytuj zadanie: Edit Quest
 Zawartość: Content
+Projekt: Project
+Wybierz lub wprowadź nowy projekt: Select or enter a new project
+Treść zadania musi zawierać od 3 do 200 znaków.: Content must be between 3 and 200 characters.
+Nazwa projektu musi zawierać od 3 do 100 znaków.: Project name must contain between 3 and 100 characters.
 Wybierz użytkownika: Select user
 Stwórz nowe zadanie: Create new Quest
 Zapisz: Submit
