Go to previous page repaired

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -77,6 +77,7 @@ Czy jesteś pewny, że chcesz usunąć użytkownika: Do you want to delete user
 Zmiana e-maila: Change e-mail
 Zapisz zmianę: Save
 Brak zadań do wyświetlenia: No quests to show
+Brak postów do wyświetlenia: No posts to show
 
 Post został poprawnie utworzony: The post has been successfully created
 Post został usunięty: The post has been deleted
