--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -83,6 +83,7 @@ Brak zadań do wyświetlenia: No quests to show
 Brak postów do wyświetlenia: No posts to show
 Lista projektów: Projects list
 Nazwa: Name
+Czy chcesz usunąć projekt: Do you want to delete project
 
 Post został poprawnie utworzony: The post has been successfully created
 Post został usunięty: The post has been deleted
@@ -98,3 +99,6 @@ Zadanie zostało zmodyfikowane: Quest has been edited
 Zadanie zostało usunięte: Quest has been deleted
 Nowy użytkownik został utworzony: New user has been created
 Otrzymano nową wiadomość: You have received a new message
+Projekt został dodany: Project has been added
+Projekt został zmodyfikowany: Project has been changed
+Projekt został usunięty: Project has been deleted
