Delete avatar route and some pop-ups added

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -109,3 +109,6 @@ Nazwa projektu została zmieniona: Project name has been changed
 Podano taką samą nazwę projektu: The same project name was given
 Awatar został usunięty: Avatar has been deleted
 Awatar został zmieniony: Avatar has been changed
+Awatar został dodany: Avatar has been added
+Dane zostały zmienione: Data has been changed
+Hasło zostało zmienione: Password has been changed
