Role client added

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -57,6 +57,12 @@ Czy chesz usunąć post: Do you want to delete post
 Anuluj: Cancel
 Stwórz nowego użytkownika: Create new user
 Rola: Role
+Klient: Client
+Klient został zmieniony: Client has been changed
+Wybierz klienta: Select client
+Wybierz projekt: Select project
+Brak projektów do wyświetlenia: No projects to show
+Moje projekty: My projects
 Użytkownik: User
 Zarejestruj: Register
 Hasło: Password
