Sending posts try/catch included

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -118,3 +118,4 @@ Awatar został zmieniony: Avatar has been changed
 Awatar został dodany: Avatar has been added
 Dane zostały zmienione: Data has been changed
 Hasło zostało zmienione: Password has been changed
+Dane Facebooka nie są kompletne.: Facebook data is not complete.
