--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -92,6 +92,7 @@ Nazwa: Name
 Czy chcesz usunąć projekt: Do you want to delete project
 Edytuj awatar: Edit your avatar
 Czy chcesz usunąć awatar: Do you want to delete avatar
+Zmień postęp: Change progress
 
 Post został poprawnie utworzony: The post has been successfully created
 Post został usunięty: The post has been deleted
