Full name added to users entity

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -120,3 +120,6 @@ Awatar został dodany: Avatar has been added
 Dane zostały zmienione: Data has been changed
 Hasło zostało zmienione: Password has been changed
 Dane Facebooka nie są kompletne.: Facebook data is not complete.
+Podano takie same dane.: The same data was provided.
+Te dane muszą zawierać od 3 do 50 znaków: This data must contain between 3 and 50 characters
+Imię i nazwisko: Full name
