--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -123,4 +123,4 @@ Dane Facebooka nie są kompletne.: Facebook data is not complete.
 Podano takie same dane.: The same data was provided.
 Te dane muszą zawierać od 3 do 50 znaków: This data must contain between 3 and 50 characters
 Imię i nazwisko: Full name
-Posty opublikowane z tego konta można zobaczyć na stronie facebookowej: Posts published from this account can be seen on the Facebook page
+Adres strony facebookowej przypisanej do tego konta: The address of the Facebook page assigned to this account
